# usmart-quant

./: .gitignore  PROJECT_PROGRESS.md  README.md  TEAM_ASSIGNMENTS.md  pyproject.toml
config/: config.example.yaml
data/: universe_100.csv
deploy/: install_deploy.sh  start_bot.sh  stop_bot.sh  us-stock-alert-bot.service.example
doc/丰臣秀吉/: 秀吉文档使用说明.md  芬虎字段因子实现清单.md  芬虎接口连通结果报告.md
docs/api/: Quote_API_core_excerpt.rst  Trade_API.rst  intro.rst  setup.rst
docs/finnhub/: FINNHUB_API_DOCS.md  Finnhub-API-README.md  README.md  finnhub-python-README.md
docs/intro/: FutuOpenDGuide.rst  intro.rst
docs/protocol/: intro.rst
docs/work_docs/: FINNHUB_CONNECTIVITY_REPORT.md  FINNHUB_FIELD_CATALOG.md  FINNHUB_RATE_LIMIT_PLAN.md  HANDOFF_TO_TOKUGAWA.md  PRD_V1_US_STOCK_ALERT_BOT.md  PRD_V2_FACTOR_STRATEGY_REFACTOR.md  PRODUCT_ROADMAP_MVP_TO_V5.md  TEST_PLAN_V1.md  V1_MVP_STRATEGY.md  V1_STOCK_SCANNER_SPEC.md
docs/德川加康/: BOT_DEV_DOCS.md
docs/立花宗茂/: 美股核心观察池100清单.md  美股自选股筛选方案.md
src/stock_alert_bot/: __init__.py  app.py  config.py  models.py  portfolio.py  scan_dispatcher.py  scanner.py
src/stock_alert_bot/feed/: __init__.py  finnhub_client.py
src/stock_alert_bot/notifier/: __init__.py  base.py  commands.py  discord_bot.py  formatter.py  telegram_bot.py
src/stock_alert_bot/scheduler/: runner.py
src/stock_alert_bot/selector/: __init__.py  filters.py  ranker.py
src/stock_alert_bot/state/: __init__.py  (+2 more)
tests/: test_finnhub_client.py  test_formatter.py  test_portfolio.py  test_scan_pipeline.py  test_selector.py  test_state_machine.py  test_universe_loader.py
(+2 files in other folders)
