[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "usmart-quant"
version = "0.1.0"
description = "V1 US stock alert bot for P0/P1 Finnhub quote scans."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "discord.py>=2.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
